log
Thu, Mar 27, 2025  7:27:34 PM: 
 list.c | 55 +++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 53 insertions(+), 2 deletions(-)
 tests:  0|0
25021aa
Thu, Mar 27, 2025  7:55:27 PM: 
 list.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|0
63f5d8a
Thu, Mar 27, 2025  7:55:50 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9d63cf9
Thu, Mar 27, 2025  8:10:53 PM: 
 list.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
 tests:  0|0
6dc1e86
Thu, Mar 27, 2025 10:12:00 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
78adf2a
Thu, Mar 27, 2025 10:24:42 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:116:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(aux = list->current){
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
8fba715
Thu, Mar 27, 2025 10:26:14 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:116:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(aux = list->current){
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
626ec31
Thu, Mar 27, 2025 10:48:58 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:116:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(aux = list->current){
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
3b1c093
Thu, Mar 27, 2025 11:03:52 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:116:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(aux = list->current){
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
3d3ec5f
